# Lightning_prj

./: .gitignore  pyproject.toml
src/: train.py
src/lightning_prj/: train.ipynb
src/lightning_prj/Config/: config.py
src/lightning_prj/Data/Analysis/: analysis.ipynb  analysis.py
src/lightning_prj/Data/Dataset/: dataset.py
src/lightning_prj/Model/: model.py
src/lightning_prj/Utils/: progress_bar.py
