[project]
name = "lightning-prj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tucker6742", email = "npgiabao91003@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "ipykernel>=6.29.5",
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.3",
    "mlflow>=2.22.0",
    "polars>=1.30.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

# [project.scripts]
# lightning-prj = "lightning_prj:main"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
